# percent-calc

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
percent_calc/: __init__.py  core.py
tests/: test_percent_calc.py
